#10 Add alphabethical validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 #Validation
 fail.required=%s %s can't be empty
 fail.size=%s %s must be between %d and %d characters
+fail.characters=%s %s can only contain %s characters
 
 fail.email.format=Email format is invalid
 
