#10 Add phone number validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@
 fail.required=%s %s can't be empty
 fail.size=%s %s must be between %d and %d characters
 fail.characters=%s %s can only contain %s characters
+fail.phone.number=%s %s is not a valid phone number
 
 fail.email.format=Email format is invalid
 
