#12 Add custom isbn validator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ fail.required=%s %s can't be empty
 fail.size=%s %s must be between %d and %d characters
 fail.characters=%s %s can only contain %s characters
 fail.phone.number=%s %s is not a valid phone number
+fail.isbn=%s %s is not a valid ISBN-10 or ISBN-13
 
 fail.email.format=Email format is invalid
 
