#12 Add book create request dto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ fail.phone.number=%s %s is not a valid phone number
 fail.isbn=%s %s is not a valid ISBN-10 or ISBN-13
 
 fail.email.format=Email format is invalid
+fail.date.past.present=Date can't be in future
 
 #Exceptions
 fail.not.found=There is no {0} with this {1}
