--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ fail.already.exists={0} with this {1} already exists
 fail.mismatch={0} does not match {1}
 fail.failed={0} is failed
 fail.illegal.state=The {0} must be {1}
+fail.invalid.type=Paremeter {0} must be of type {1}, Invalid value: {2} {3}
 
 fail.forbidden=You are not allowed to perform this operation
 fail.general=An unexpected error happened
