#15 Add borrow request dto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ fail.isbn=%s %s is not a valid ISBN-10 or ISBN-13
 
 fail.email.format=Email format is invalid
 fail.date.past.present=Date can't be in future
+fail.date.future.present=Date cant't be in past
+fail.date.future=Date must be in future
 
 #Exceptions
 fail.not.found=There is no {0} with this {1}
