#16 Add the already returned borrowing message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,7 @@ fail.invalid.type=Paremeter {0} must be of type {1}, Invalid value: {2} {3}
 fail.forbidden=You are not allowed to perform this operation
 fail.general=An unexpected error happened
 fail.already.borrowed=This user already borrowed this book
+fail.already.returned.borrowing=This borrowing is already returned
 
 #Success
 success.message={0} successfully {1}
