#16 Add not avaiable exception

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,7 @@ fail.mismatch={0} does not match {1}
 fail.failed={0} is failed
 fail.illegal.state=The {0} must be {1}
 fail.invalid.type=Paremeter {0} must be of type {1}, Invalid value: {2} {3}
+fail.not.available=The {0} is not available
 
 fail.forbidden=You are not allowed to perform this operation
 fail.general=An unexpected error happened
