#18 Add overdue exception

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ fail.forbidden=You are not allowed to perform this operation
 fail.general=An unexpected error happened
 fail.already.borrowed=This user already borrowed this book
 fail.already.returned.borrowing=This borrowing is already returned
+fail.overdue=You can't borrow a book before you return your overdue books
 
 #Success
 success.message={0} successfully {1}
