#18 Add inactive exception

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ fail.general=An unexpected error happened
 fail.already.borrowed=This user already borrowed this book
 fail.already.returned.borrowing=This borrowing is already returned
 fail.overdue=You can't borrow a book before you return your overdue books
+fail.inactive=Your account is deactivated, you can contact a librarian after you returned all your books
 
 #Success
 success.message={0} successfully {1}
