#18 Add user not deactivated exception

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,7 @@ fail.overdue=You can't borrow a book before you return your overdue books
 fail.inactive=Your account is deactivated, you can contact a librarian after you returned all your books
 fail.has.active.borrowings=The user has active borrowings, he/she must return all books before re-activating.
 fail.borrowing.not.excusable=This borrowing is not excusable, only borrowing returned overdue can be excused.
+fail.user.not.deactivated=This is user is not deactivated.
 
 #Success
 success.message={0} successfully {1}
