#24 Refactor user service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,6 +29,7 @@ fail.inactive=Your account is deactivated, you can contact a librarian after you
 fail.has.active.borrowings=The user has active borrowings, he/she must return all books before re-activating.
 fail.borrowing.not.excusable=This borrowing is not excusable, only borrowing returned overdue can be excused.
 fail.user.not.deactivated=This is user is not deactivated.
+fail.user.promote=This promotion is invalid, A user can only be promoted to librarian if not already
 
 #Success
 success.message={0} successfully {1}
