#30 Add positive number validation

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ fail.size=%s %s must be between %d and %d characters
 fail.characters=%s %s can only contain %s characters
 fail.phone.number=%s %s is not a valid phone number
 fail.isbn=%s %s is not a valid ISBN-10 or ISBN-13
+fail.positive.number=%s %s must be a positive %s
 
 fail.email.format=Email format is invalid
 fail.date.past.present=Date can't be in future
@@ -30,6 +31,5 @@ fail.has.active.borrowings=The user has active borrowings, he/she must return al
 fail.borrowing.not.excusable=This borrowing is not excusable, only borrowing returned overdue can be excused.
 fail.user.not.deactivated=This is user is not deactivated.
 fail.user.promotion=This promotion is invalid, A user can only be promoted to librarian if not already
-
 #Success
 success.message={0} successfully {1}
