#31 Add password update

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -27,9 +27,11 @@ fail.already.borrowed=This user already borrowed this book
 fail.already.returned.borrowing=This borrowing is already returned
 fail.overdue=You can't borrow a book before you return your overdue books
 fail.inactive=Your account is deactivated, you can contact a librarian after you returned all your books
-fail.has.active.borrowings=The user has active borrowings, he/she must return all books before re-activating.
-fail.borrowing.not.excusable=This borrowing is not excusable, only borrowing returned overdue can be excused.
-fail.user.not.deactivated=This is user is not deactivated.
+fail.has.active.borrowings=The user has active borrowings, he/she must return all books before re-activating
+fail.borrowing.not.excusable=This borrowing is not excusable, only borrowing returned overdue can be excused
+fail.user.not.deactivated=This is user is not deactivated
 fail.user.promotion=This promotion is invalid, A user can only be promoted to librarian if not already
+fail.user.password.not.match=The old password does not match with the password in system
+
 #Success
 success.message={0} successfully {1}
